Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_CRC_Email_Address__mdt/SMAX_PS_Service_Alert_CRC_Email_Address__mdt.object-meta.xml
<CustomObject>
    <description>Customer Care Email Distribution Lists for Service Alerts</description>
    <label>Service Alert CRC Email Address</label>
    <pluralLabel>Service Alert CRC Email Addresses</pluralLabel>
</CustomObject>