Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_CRC_Email_Address__mdt/fields/SMAX_PS_Indirect_CRC__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Indirect_CRC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this the Distribution List that should receive notification from countries that are indirectly supported?
NOTE: You can only have one Indirect CRC per Region/SubRegion</description>
    <label>Indirect CRC</label>
    <type>Checkbox</type>
</CustomField>