Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_CRC_Email_Address__mdt/fields/SMAX_PS_Owned_By_Company__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Owned_By_Company__c</fullName>
    <label>Owned By Company</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AES</fullName>
            </value>
            <value>
                <fullName>LSDX</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>