Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_CRC_Email_Address__mdt/fields/SMAX_PS_Service_Alert_Country__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Service_Alert_Country__c</fullName>
    <description>The Country in the Service Alert record we will match on</description>
    <label>Service Alert Country</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>