Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_CRC_Email_Address__mdt/fields/SMAX_PS_Service_Alert_Sub_Region__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Service_Alert_Sub_Region__c</fullName>
    <label>Service Alert Sub Region</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>