Perkin-UAT/force-app/main/default/objects/SMAX_PS_Service_Alert_CRC_Email_Address__mdt/listViews/SMAX_PS_Service_Alert_CRC_Emails.listView-meta.xml
<ListView>
    <fullName>SMAX_PS_Service_Alert_CRC_Emails</fullName>
    <columns>DeveloperName</columns>
    <columns>SMAX_PS_Email_Addresses__c</columns>
    <columns>SMAX_PS_Service_Alert_Country__c</columns>
    <columns>SMAX_PS_Service_Alert_Region__c</columns>
    <columns>SMAX_PS_Service_Alert_Sub_Region__c</columns>
    <columns>SMAX_PS_Owned_By_Company__c</columns>
    <columns>SMAX_PS_Indirect_CRC__c</columns>
    <filterScope>Everything</filterScope>
    <label>Service Alert CRC Emails</label>
    <language>en_US</language>
</ListView>